<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.LoginActivity">
	
	<io.travelaid.widget.BaselineGridTextView
		android:id="@+id/logo_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="32sp"
		app:fontFamily="@font/nunito_extrabold"
		android:padding="12dp"
		android:text="@string/app_name"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Headline"
		
		app:layout_constraintTop_toTopOf="parent" />
	
	<ImageView
		android:id="@+id/logo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/logo"
		app:layout_constraintTop_toBottomOf="@id/logo_title" />
	
	<io.travelaid.widget.BaselineGridTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:fontFamily="@font/nunito_semibold"
		android:padding="12dp"
		android:text="@string/app_slogan"
		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
		android:textStyle="italic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/logo" />
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/username_container"
		
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="36sp"
		android:layout_marginStart="36sp"
		android:layout_marginTop="120sp"
		app:layout_constraintTop_toBottomOf="@id/logo">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/username"
			
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/nunito_semibold"
			android:hint="@string/username"
			android:inputType="textEmailAddress"
			android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
	
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/password_container"
		android:layout_width="match_parent"
		
		android:layout_height="wrap_content"
		android:layout_marginEnd="36sp"
		android:layout_marginStart="36sp"
		android:layout_marginTop="16sp"
		app:layout_constraintTop_toBottomOf="@id/username_container">
		
		<android.support.design.widget.TextInputEditText
			android:id="@+id/password"
			
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/nunito_semibold"
			android:hint="@string/password"
			android:inputType="textPassword"
			android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
	
	</android.support.design.widget.TextInputLayout>
	
	
	<LinearLayout
		android:id="@+id/button_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">
		
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/light_mobile_button_background"
			android:onClick="login"
			android:padding="12dp"
			android:text="@string/login"
			android:textColor="@color/pure_white" />
		
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/dark_mobile_button_background"
			android:onClick="register"
			android:padding="12dp"
			android:text="@string/register"
			android:textColor="@color/pure_white" />
	
	</LinearLayout>

</android.support.constraint.ConstraintLayout>